fixed #3